Implement automatic save when last client disconnects
Co-authored-by: fridser <180960050+fridser@users.noreply.github.com>